--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ad181ccb",
+   "id": "0c1f333f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,13 +78,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "520f509d",
+   "id": "a6769e57",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Curiosity Mars Rover Snaps Its Highest-Resolution Panorama Yet</div>"
+       "<div class=\"content_title\">A Year of Surprising Science From NASA's InSight Mars Mission</div>"
       ]
      },
      "execution_count": 5,
@@ -99,13 +99,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0752eabb",
+   "id": "34ca3a64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"NASA's Curiosity Mars Rover Snaps Its Highest-Resolution Panorama Yet\""
+       "\"A Year of Surprising Science From NASA's InSight Mars Mission\""
       ]
      },
      "execution_count": 6,
@@ -122,13 +122,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2d62ca34",
+   "id": "7217bd20",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'To go along with the stunning 1.8-billion-pixel image, a new video offers a sweeping view of the Red Planet.'"
+       "\"A batch of new papers summarizes the lander's findings above and below the surface of the Red Planet.\""
       ]
      },
      "execution_count": 7,
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "863fc3c5",
+   "id": "aa01acca",
    "metadata": {},
    "source": [
     "### Featured Images"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b6252b4c",
+   "id": "a96d0b1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "36a7d0c6",
+   "id": "073dd375",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2b710a65",
+   "id": "feef1046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,13 +188,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "44a722e4",
+   "id": "bcd116eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars2.jpg'"
+       "'image/featured/mars3.jpg'"
       ]
      },
      "execution_count": 11,
@@ -211,13 +211,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6d44b9bc",
+   "id": "36b7068c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
      "execution_count": 12,
@@ -233,8 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "38172b91",
+   "execution_count": 13,
+   "id": "07730e9b",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,8 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "16da9f92",
+   "execution_count": 14,
+   "id": "ef575f29",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,18 +354,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "20746ae0",
+   "execution_count": 15,
+   "id": "4024d797",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#D1: Scrape High-Resolution Mars’ Hemisphere Images and Titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "48800155",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Use browser to visit the URL \n",
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7c32763b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Create a list to hold the images and titles.\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "# Parse the html with soup\n",
+    "html = browser.html\n",
+    "main_page_soup = soup(html, 'html.parser')\n",
+    "\n",
+    "# Find the number of pictures to scan\n",
+    "pics_count = len(main_page_soup.select(\"div.item\"))\n",
+    "\n",
+    "# for loop over the link of each sample picture\n",
+    "for i in range(pics_count):\n",
+    "    \n",
+    "    # Create an empty dict to hold the search results\n",
+    "    results = {}\n",
+    "    \n",
+    "    # Find link to picture and open it\n",
+    "    link_image = main_page_soup.select(\"div.description a\")[i].get('href')\n",
+    "    browser.visit(f'https://astrogeology.usgs.gov{link_image}')\n",
+    "    \n",
+    "    # Parse new html page with soup\n",
+    "    html = browser.html\n",
+    "    sample_image_soup = soup(html, 'html.parser')\n",
+    "    \n",
+    "    # Get full image link\n",
+    "    img_url = sample_image_soup.select_one(\"div.downloads ul li a\").get('href')\n",
+    "    \n",
+    "    # Get full image title\n",
+    "    img_title = sample_image_soup.select_one(\"h2.title\").get_text()\n",
+    "    \n",
+    "    # Add extracts to results dict\n",
+    "    results = {\n",
+    "        'img_url': img_url,\n",
+    "        'title': img_title}\n",
+    "    \n",
+    "    # Append results dict to hemisphere image urls list\n",
+    "    hemisphere_image_urls.append(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a4f176d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Print the list that holds the dictionary of each image url and title.\n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d4994d66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Quit the browser\n",
     "browser.quit()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f391ef1",
+   "id": "57567752",
    "metadata": {},
    "outputs": [],
    "source": []
